<resources>
    <string name="app_name">DareMan</string>
    <string name="title_home">Top</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="splash_title">Dare Man</string>
    <string name="splash_sub_title">「出会い」をまとめ・管理</string>
    <string name="splash_dialog_title">サイトを選択してください：</string>

    <string name="menu_one">サイト選択へ戻る</string>
    <string name="menu_two">チャットチャンネル</string>
    <string name="menu_three">只今準備中。。。</string>
    <string name="menu_four">只今準備中。。。</string>
    <string name="menu_five">只今準備中。。。</string>
    <string name="menu_six">只今準備中。。。</string>
    <string name="menu_seven">只今準備中。。。</string>

    <string name="bg_img">背景画像</string>

    <string name="ADMOB_APP_ID">ca-app-pub-1668811522927993~1888119014</string>
    <string name="banner_ad_unit_id">ca-app-pub-1668811522927993/8970254881</string>
    <string name="interstitial_ad_unit_id">ca-app-pub-1668811522927993/7031089897</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="login_title">ログイン</string>
    <string name="login_btn">ログイン</string>
    <string name="forget_password">パスワードを忘れた方</string>

    <string name="type_msg">メッセージを入力してください</string>

    <string name="create_account_title">新規登録</string>
    <string name="username">ニックネーム</string>
    <string name="gender_select">性別</string>
    <string name="comment">ひとこと</string>
    <string name="register_btn">登録</string>

    <string name="reset_btn">再設定する</string>
    <string name="forget_disp">パスワード再設定のEmailが届きます。Email内の説明に参照して、パスワードを再設定してください。</string>
    <string name="chat_title">デアマン・チャット</string>

    <string name="profile">プロフィール</string>

</resources>
