<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:ads="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/sp"
            android:orientation="horizontal">

        <!--<ImageView-->
                <!--android:id="@+id/title_img"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="280dp"-->
                <!--android:layout_alignParentTop="true"-->
                <!--android:layout_centerHorizontal="true"-->
                <!--android:src="@drawable/bgs"-->
                <!--android:scaleType="fitXY"-->
                <!--android:contentDescription="@string/bg_img"/>-->

        <Button
                android:id="@+id/menu_one"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:gravity="center"
                android:layout_gravity="center_horizontal"
                android:onClick="toSplash"
                android:background="@color/tran_ho"
                android:textColor="@color/silver_white"
                android:text="@string/menu_one" >
        </Button>
        <Button
                android:id="@+id/menu_two"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_below="@+id/menu_one"
                android:layout_margin="5dp"
                android:gravity="center"
                android:layout_gravity="center_horizontal"
                android:background="@color/tran_ch"
                android:textColor="@color/silver_white"
                android:text="@string/menu_two" >
        </Button>
        <Button
                android:id="@+id/menu_three"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_below="@+id/menu_two"
                android:layout_margin="5dp"
                android:gravity="center"
                android:layout_gravity="center_horizontal"
                android:background="@color/tran_hu"
                android:textColor="@color/silver_white"
                android:text="@string/menu_three" >
        </Button>
        <Button
                android:id="@+id/menu_four"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_below="@+id/menu_three"
                android:layout_margin="5dp"
                android:gravity="center"
                android:layout_gravity="center_horizontal"
                android:background="@color/tran_lu"
                android:textColor="@color/silver_white"
                android:text="@string/menu_four" >
        </Button>
        <Button
                android:id="@+id/menu_five"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_below="@+id/menu_four"
                android:layout_margin="5dp"
                android:gravity="center"
                android:layout_gravity="center_horizontal"
                android:background="@color/tran_la"
                android:textColor="@color/silver_white"
                android:text="@string/menu_five" >
        </Button>
        <Button
                android:id="@+id/menu_six"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_below="@+id/menu_five"
                android:layout_margin="5dp"
                android:gravity="center"
                android:layout_gravity="center_horizontal"
                android:background="@color/tran_di"
                android:textColor="@color/silver_white"
                android:text="@string/menu_six" >
        </Button>
        <Button
                android:id="@+id/menu_seven"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_below="@+id/menu_six"
                android:layout_margin="5dp"
                android:gravity="center"
                android:layout_gravity="center_horizontal"
                android:background="@color/tran_zi"
                android:textColor="@color/silver_white"
                android:text="@string/menu_seven" >
        </Button>

        <com.google.android.gms.ads.AdView
                android:id="@+id/adViewDash"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                ads:adSize="SMART_BANNER"
                ads:adUnitId="@string/banner_ad_unit_id">
        </com.google.android.gms.ads.AdView>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>