<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/sp"
                xmlns:ads="http://schemas.android.com/apk/res-auto">

    <ImageView
            android:id="@+id/title_img"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:src="@drawable/bgs"
            android:scaleType="fitXY"/>

    <!--<Button-->
            <!--android:id="@+id/menu_one"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="100dp"-->
            <!--android:layout_below="@+id/title_img"-->
            <!--android:layout_margin="5dp"-->
            <!--android:gravity="center"-->
            <!--android:layout_gravity="center_horizontal"-->
            <!--android:onClick="toSplash"-->
            <!--android:text="@string/menu_one" >-->
        <!---->
    <!--</Button>-->

    <Button
            android:id="@+id/menu_one"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_margin="5dp"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:layout_below="@+id/title_img"
            android:onClick="toSplash"
            android:background="@color/tran_ho"
            android:textColor="@color/silver_white"
            android:text="@string/menu_one" >
    </Button>

    <!--<Button-->
            <!--android:id="@+id/menu_two"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="100dp"-->
            <!--android:layout_below="@+id/menu_one"-->
            <!--android:layout_margin="5dp"-->
            <!--android:gravity="center"-->
            <!--android:layout_gravity="center_horizontal"-->
            <!--android:text="@string/menu_two" >-->
    <!--</Button>-->

    <Button
            android:id="@+id/menu_two"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_below="@+id/menu_one"
            android:layout_margin="5dp"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:background="@color/tran_ch"
            android:textColor="@color/silver_white"
            android:text="@string/menu_two" >
    </Button>

    <com.google.android.gms.ads.AdView
            android:id="@+id/adViewDash"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            ads:adSize="SMART_BANNER"
            ads:adUnitId="@string/banner_ad_unit_id">
    </com.google.android.gms.ads.AdView>

</RelativeLayout>